tests/community/submissions/36/myTests/NullArithmetics.output.error
Type error at <stdin> line 5 col 11: operation "+" not defined for NULL, NULL
