tests/community/submissions/36/myTests/NullArithmetics.sl
function null() {
}

function main() {
  println(null()+null());
  println(null()-null());
  println(null()*null());
  println(null()/null());
}
